fixed disappearing navbar on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -80,3 +80,5 @@ input[type=submit]:hover {
 	background-color: #f2f2f2;
 	padding: 20px;
 }
+
+.navbar-collapse.collapse.in { display: block!important; }
